--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
-# expo
-.expo/
-
 # dependencies
 /node_modules
 
@@ -16,3 +13,4 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .DS_Store
+package-lock.json
