--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,14 @@
 # dependencies
 /node_modules
 
+# testing
+/coverage
+
+# production
+/build
+
 # misc
+.DS_Store
 .env.local
 .env.development.local
 .env.test.local
@@ -12,5 +19,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.DS_Store
 package-lock.json
