feat: adds styling for material-ui POC

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@material-ui/core": "^1.4.1",
+    "jquery": "^3.3.1",
+    "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-flexbox-grid": "^2.1.2",
