--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^1.4.1",
+    "@material-ui/icons": "^1.4.1",
     "fetch-jsonp": "^1.1.3",
     "jquery": "^3.3.1",
     "prop-types": "^15.6.2",
